fixing layout issues

--- a/style.css
+++ b/style.css
@@ -99,9 +99,14 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 }
 
 .content {
-	padding: 10px 0;
+	padding: 10px;
 	width: 80%;
-		float: right;
+	float: right;
+}
+
+.contentcontainer {
+	width: 80%;
+	margin: auto;
 }
 
 /* ~~ This grouped selector gives the lists in the .content area space ~~ */
